// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.html - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: false
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title'></div>
<div title="My 'title"></div>
<div title='My "title"'></div>
<div title="My 'title'"></div>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title'></div>
<div title="My 'title"></div>
<div title='My "title"'></div>
<div title="My 'title'"></div>

================================================================================
`;

exports[`attributes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title'></div>
<div title="My 'title"></div>
<div title='My "title"'></div>
<div title="My 'title'"></div>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title'></div>
<div title="My 'title"></div>
<div title='My "title"'></div>
<div title="My 'title'"></div>

================================================================================
`;

exports[`smart-quotes.html - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: false
                                                                                | printWidth
=====================================input======================================
<div 
    smart-quotes='123 " 456'
    smart-quotes="123 ' 456"
    smart-quotes='123 &apos;&quot; 456'
></div>

=====================================output=====================================
<div
  smart-quotes='123 " 456'
  smart-quotes="123 ' 456"
  smart-quotes="123 '&quot; 456"
></div>

================================================================================
`;

exports[`smart-quotes.html - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div 
    smart-quotes='123 " 456'
    smart-quotes="123 ' 456"
    smart-quotes='123 &apos;&quot; 456'
></div>

=====================================output=====================================
<div
  smart-quotes='123 " 456'
  smart-quotes="123 ' 456"
  smart-quotes='123 &apos;" 456'
></div>

================================================================================
`;
